# raft-db

./: .clang-format  .clang-format-ignore  .gitignore  .gitlab-ci.yml  CMakeLists.txt  CMakePresets.json  Makefile  README.md  iwyu.imp  run
src/distributed-database/: CMakeLists.txt  main.c  start.c  start.h  test.c  test.h
src/distributed-database/client-handling/: input.c  input.h  server.c  server.h
src/distributed-database/networking/: execute.c  execute.h  msg.c  msg.h  networking-test.c  rpc.c  rpc.h  send.c  send.h  worker.c  worker.h
src/distributed-database/raft/: callbacks.c  callbacks.h  elections.c  elections.h  log-entry.c  log-entry.h  log-table.c  log-table.h  persistent-store.c  persistent-store.h  raft-node.c  raft-node.h  raft.c  raft.h
src/distributed-database/table/: conditions.c  conditions.h  createTable.c  createTable.h  db-tests.c  db-utils.c  db-utils.h  delete.c  delete.h  insert.c  insert.h  operation.c  operation.h  pageBuffer.c  pageBuffer.h  pages.c  pages.h  schema.c  schema.h  select.c  select.h  table.c  table.h  update.c  update.h
src/distributed-database/table/buffer/: buffer.c  buffer.h  pageBuffer.c  pageBuffer.h  pages.c  pages.h
src/distributed-database/table/core/: field.c  field.h  pages.c  pages.h  record.c  record.h  recordArray.c  recordArray.h  table.c  table.h
src/distributed-database/table/index/: b+-tree.c  b+-tree.h
src/distributed-database/table/operations/: createTable.c  createTable.h  delete.c  delete.h  insert.c  insert.h  operation.c  operation.h  select.c  select.h  sqlToOperation.c  sqlToOperation.h  (+2 more)
(+105 files in other folders)
